--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,7 @@ body {
   font-family: 'Libre Franklin', sans-serif;
   margin: auto;
   max-width: 320px;
+  scroll-behavior: smooth;
 }
 
 a {
@@ -50,7 +51,7 @@ video {
 header nav {
   padding: 20px 70px;
   font-size: 16px;
-  font-weight: 700;
+  font-weight: 400;
   text-decoration: solid;
 }
 
@@ -112,4 +113,36 @@ hr {
 
 figure {
   padding: 15px 0;
+}
+
+figcaption {
+  background-color: white;
+  text-align: center;
+  font-size: 20px;
+  line-height: 1.2;
+  padding: 25px;
+}
+
+.recipe-border {
+  border: 1px solid lightgrey;
+}
+
+footer {
+  background-color: black;
+  padding: 30px 15px;
+}
+
+footer h3 {
+  font-family: 'Sorts Mill Goudy', serif;
+  font-size: 20px;
+  line-height: 1.2;
+  color: white;
+}
+
+.end-container {
+  color: white;
+  font-size: 16px;
+  line-height: 1.2;
+  display: flex;
+  flex-direction: column;
 }
