--- a/css/main.css
+++ b/css/main.css
@@ -41,6 +41,7 @@ video {
   max-inline-size: 100%;
   block-size: auto;
   vertical-align: text-top;
+  display: block;
 }
 
 /* ====================================
@@ -64,6 +65,7 @@ header nav {
 .recipe-tag {
   font-size: 11px;
   font-weight: 700;
+  line-height: 1.3;
   color: white;
   background-color: red;
   border-radius: 50px;
